[gd_scene load_steps=23 format=3 uid="uid://dfx5t41cnwp35"]

[ext_resource type="Script" path="res://td_enemy.gd" id="1_slpdo"]
[ext_resource type="Texture2D" uid="uid://dqm50nd5cy7oq" path="res://assets/sprites/zeldalike/log.png" id="2_tyj87"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjr7t"]
size = Vector2(20, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1cgue"]
size = Vector2(30, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh88h"]
atlas = ExtResource("2_tyj87")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygnha"]
atlas = ExtResource("2_tyj87")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_emln6"]
atlas = ExtResource("2_tyj87")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fke4n"]
atlas = ExtResource("2_tyj87")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyfan"]
atlas = ExtResource("2_tyj87")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_by0vt"]
atlas = ExtResource("2_tyj87")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78m5v"]
atlas = ExtResource("2_tyj87")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e0aj"]
atlas = ExtResource("2_tyj87")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_maowu"]
atlas = ExtResource("2_tyj87")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygd4f"]
atlas = ExtResource("2_tyj87")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50lid"]
atlas = ExtResource("2_tyj87")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tm1q3"]
atlas = ExtResource("2_tyj87")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtc53"]
atlas = ExtResource("2_tyj87")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdvyt"]
atlas = ExtResource("2_tyj87")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj1la"]
atlas = ExtResource("2_tyj87")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivec6"]
atlas = ExtResource("2_tyj87")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26uej"]
atlas = ExtResource("2_tyj87")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q0gux"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh88h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygnha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emln6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fke4n")
}],
"loop": true,
"name": &"e_walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyfan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by0vt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78m5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e0aj")
}],
"loop": true,
"name": &"e_walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_maowu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygd4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50lid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tm1q3")
}],
"loop": true,
"name": &"e_walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtc53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdvyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj1la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivec6")
}],
"loop": true,
"name": &"e_walk_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26uej")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="td_enemy" type="CharacterBody2D"]
script = ExtResource("1_slpdo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_qjr7t")
debug_color = Color(0.941176, 0.121569, 0.517647, 0.419608)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_1cgue")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -2)
sprite_frames = SubResource("SpriteFrames_q0gux")
animation = &"e_walk_left"

[node name="RayCast2DM" type="RayCast2D" parent="."]
target_position = Vector2(-38, 0)

[node name="RayCast2DL" type="RayCast2D" parent="."]
target_position = Vector2(-36, 14)

[node name="RayCast2DR" type="RayCast2D" parent="."]
target_position = Vector2(-34, -15)
